# gcrs-expert-abstractions

./: .gitignore  LICENSE.txt  README.md  mm_tuning.py  pyproject.toml
cleanrl/: ppo.py  rpo_continuous_action.py  rpo_goal_options.py  rpo_manipulator.py  run_rpo_continuous_action.py  test_env.py
cleanrl/goal/: __init__.py  final_goal_no_reward.py  goal_wrapper_v0.py  goal_wrapper_v1.py  goal_wrapper_v2.py  goal_wrapper_v3.py  manipulation_goal.py  minimujo_goal.py  object_abstraction.py  option_goal_wrapper.py  option_goal_wrapper_v1.py  option_goal_wrapper_v2.py  option_goal_wrapper_v3.py  solver.py
cleanrl_utils/: env.py  recording.py
gcrs/: env.py  model.py  rpo_continuous_action.py  test_env.py
gcrs/goal/: __init__.py  goal_wrapper.py  grid_goal_wrapper.py  grid_planning.py  object_abstraction.py  object_goal_wrapper.py  planner.py  room_goal_wrapper.py  room_planning.py
gcrs/utils/: logging.py  recording.py
scripts/: train_doorkey.sh  train_lava_crossing.sh  train_object_delivery.sh  train_umaze.sh
