[project]
name = "gcrs"
version = "1.0.0"
description = "Implementation of Goal-Conditioned Reward Shaping for using expert abstractions in multi-task continuous control RL."
requires-python = ">= 3.9"
authors = [
    {name = "Jeff Jewett", email = "jewettje@oregonstate.edu"},
]
license = "MIT"
license-files = ["LICENSE.txt"]
homepage = "https://github.com/Intelligent-Reliable-Autonomous-Systems/gcrs-expert-abstractions"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "cocogrid @ git+https://github.com/Intelligent-Reliable-Autonomous-Systems/CocoGrid",
    "tensorboard >=2.10.0",
    "wandb >=0.13.11",
    "torch >=1.12.1",
    "gymnasium >=0.28.1",
    "moviepy >=1.0.3",
    "pygame ==2.1.0",
    "rich <12.0",
    "tyro >=0.5.10"
]

[build-system]
requires = ["hatchling", "swig"]
build-backend = "hatchling.build"
